# xmms-volnorm

./: .cvsignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  RELEASE  TODO  acconfig.h  aclocal.m4  autogen.sh  configure  configure.in  mkinstalldirs  volnorm.lsm.in  volnorm.spec.in
glade/: README  volnorm.glade
intl/: Makefile.in
po/: .cvsignore  cat-id-tbl.c  volnorm.pot
src/: .cvsignore  Makefile.am  Makefile.in  about.c  about.h  callbacks.c  callbacks.h  cfg.c  cfg.h  config.h.in  interface.c  interface.h  monitor.c  normvol.c  normvol.h  smooth.c  smooth.h  support.c  volnorm.glade
tests/: .cvsignore  Makefile.am  testload.c  xmms_dummy.c
