dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/normvol.c)
AC_PREREQ(2.50) dnl We want to use autoconf 2.50
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(volnorm,0.8.2)

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL


AC_PATH_PROG(XMMS_PATH,xmms,no)

if test "x$XMMS_PATH" = "xno"; then
	echo "XMMS does not appear to be installed."
	exit 1
fi

AC_ARG_ENABLE( one-plugin-dir,
[  --enable-one-plugin-dir  use a single plugin dir [default=no]],,
                enable_one_plugin_dir="no")

AC_ARG_WITH(plugindir, 
[  --with-plugindir=DIR    use this for plugin dir ],
				plugindir=$withval,
                plugindir=`xmms-config --plugin-dir`)

AC_MSG_CHECKING(XMMS plugin dir)
dnl plugindir=`xmms-config --plugin-dir`
AC_SUBST(plugindir)
AC_MSG_RESULT($plugindir)

if test ! -d "$libdir"; then
  if test "x$enable_one_plugin_dir" = "xyes"; then
    AC_MSG_CHECKING(XMMS single plugin dir)
    libdir="$plugindir/Plugins"
    AC_MSG_RESULT($libdir)
  else
    AC_MSG_CHECKING(XMMS Effect plugin dir)
    libdir=`xmms-config --effect-plugin-dir`
    AC_MSG_RESULT($libdir)
  fi
fi 

dnl Checks for libraries.
AM_PATH_GLIB(1.2.6,,AC_MSG_ERROR([*** GLIB >= 1.2.6 not installed - please install first ***]))
AM_PATH_GTK(1.2.6,,AC_MSG_ERROR([*** GTK+ >= 1.2.6 not installed - please install first ***]),gthread)

dnl Checks for header files.

AC_CHECK_HEADERS(gtkextra/gtkplot.h, AC_DEFINE(USE_MONITOR))

dnl if test $ac_cv_header_stdc = yes; then
dnl	AC_DEFINE(__STDC__)
dnl fi

dnl Other stuff
AC_MSG_CHECKING(machine architecture)
AC_SUBST(ARCH_TYPE)
ARCH_TYPE=`uname -m`
AC_MSG_RESULT($ARCH_TYPE)

AM_CONDITIONAL(ARCH_X86,test "$ARCH_TYPE" = "i386" || test "$ARCH_TYPE" = "i486" || test "$ARCH_TYPE" = "i586" || test "$ARCH_TYPE" = "i686" || test "$ARCH_TYPE" = "i86pc")

AC_OUTPUT(
Makefile
src/Makefile
tests/Makefile
volnorm.spec
volnorm.lsm
)

